Fixed version - name spacing

--- a/webapp/src/components/sidebar/sidebarUserMenu.scss
+++ b/webapp/src/components/sidebar/sidebarUserMenu.scss
@@ -34,7 +34,7 @@
         }
 
         .version {
-            font-size: 11px;
+            font-size: 10px;
             line-height: 11px;
             font-weight: 500;
             color: rgba(var(--sidebar-text-rgb), 0.8);
